feat: add store swagger docs
